{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 105,
  "lineage": "e4b5be10-8338-510a-b3dc-474ebe8904ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:382068941031:instance/i-01c512f2a1d19ece0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c512f2a1d19ece0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cdf017916efbcbdd",
            "private_dns": "ip-172-31-17-99.ec2.internal",
            "private_ip": "172.31.17.99",
            "public_dns": "ec2-52-90-61-75.compute-1.amazonaws.com",
            "public_ip": "52.90.61.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb914a567ea70eea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09eacb99a8f520563",
            "tags": {
              "Name": "dev0"
            },
            "tags_all": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0c61c584b5131b7"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:382068941031:instance/i-0430d146529fb3f14",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0430d146529fb3f14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab677f6e88d26d4f",
            "private_dns": "ip-172-31-27-209.ec2.internal",
            "private_ip": "172.31.27.209",
            "public_dns": "ec2-54-227-18-185.compute-1.amazonaws.com",
            "public_ip": "54.227.18.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06131d22aea8dc8f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09eacb99a8f520563",
            "tags": {
              "Name": "dev1"
            },
            "tags_all": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0c61c584b5131b7"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:382068941031:instance/i-0604cbc3f360dfeda",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0604cbc3f360dfeda",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf2ae35bd9892061",
            "private_dns": "ip-172-31-31-189.ec2.internal",
            "private_ip": "172.31.31.189",
            "public_dns": "ec2-52-91-219-134.compute-1.amazonaws.com",
            "public_ip": "52.91.219.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05de9fa699dded4e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09eacb99a8f520563",
            "tags": {
              "Name": "dev2"
            },
            "tags_all": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0c61c584b5131b7"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:382068941031:instance/i-00d82220e33a29cab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d82220e33a29cab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02d006a6641ae2dea",
            "private_dns": "ip-172-31-17-175.ec2.internal",
            "private_ip": "172.31.17.175",
            "public_dns": "ec2-54-204-231-196.compute-1.amazonaws.com",
            "public_ip": "54.204.231.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05620de5731abce4c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09eacb99a8f520563",
            "tags": {
              "Name": "dev4"
            },
            "tags_all": {
              "Name": "dev4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0c61c584b5131b7"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.dev4",
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:382068941031:instance/i-0656eaddcc3178363",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0656eaddcc3178363",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0843df623c7c0ba1f",
            "private_dns": "ip-172-31-26-235.ec2.internal",
            "private_ip": "172.31.26.235",
            "public_dns": "ec2-34-207-220-143.compute-1.amazonaws.com",
            "public_ip": "34.207.220.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05630b0027edbaf7e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09eacb99a8f520563",
            "tags": {
              "Name": "dev5"
            },
            "tags_all": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0c61c584b5131b7"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:382068941031:instance/i-0b5900d7ad4687c43",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5900d7ad4687c43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-key-east-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a906228a42dde48a",
            "private_dns": "ip-172-31-9-199.us-east-2.compute.internal",
            "private_ip": "172.31.9.199",
            "public_dns": "ec2-3-144-98-28.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.98.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07146e74b4c24b75f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6c51cbbb8f30fd1",
            "tags": {
              "Name": "dev6"
            },
            "tags_all": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ef68a97a64e05a27"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homologacao",
            "aws_security_group.acesso-ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382068941031:security-group/sg-0c0c61c584b5131b7",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-0c0c61c584b5131b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "168.181.127.219/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": "",
            "owner_id": "382068941031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f587607d946af39"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-us-east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382068941031:security-group/sg-0ef68a97a64e05a27",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-0ef68a97a64e05a27",
            "ingress": [
              {
                "cidr_blocks": [
                  "168.181.127.219/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": "",
            "owner_id": "382068941031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e7fe07d456462a3"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}